welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:46: error: illegal character '\u00ab'
Right (signifie «droite» en anglais)
                ^BDRBuggle:46: error: illegal character '\u00bb'
Right (signifie «droite» en anglais)
                       ^BDRBuggle:49: error: illegal character '\u00ab'
Left (signifie «gauche» en anglais)
               ^BDRBuggle:49: error: illegal character '\u00bb'
Left (signifie «gauche» en anglais)
                      ^BDRBuggle:2: error: ')' expected but ':' found.
while (estSurMessage():Boolean:) {
                              ^BDRBuggle:35: error: ';' expected but ':' found.
estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
                       ^BDRBuggle:40: error: ';' expected but symbol literal found.
L'objectif est donc d'organiser une partie de BDR entre les buggles en leur apprenant à bouger en fonction des indications écrites par terre. Ces indications sont des messages au sol, avec le code suivant: 
 ^BDRBuggle:45: error: '}' expected but 'case' found.
Tourner à droite et avancer d'une case
                                  ^